@@ -53,8 +53,8 @@ double dhyper(double x, double r, double b, double n, int give_log)
 
     if (R_D_negInonint(r) || R_D_negInonint(b) || R_D_negInonint(n) || n > r+b)
 	ML_ERR_return_NAN;
-    if (R_D_negInonint(x))
-	return(R_D__0);
+    if(x < 0) return(R_D__0);
+    R_D_nonint_check(x);// incl warning
 
     x = R_forceint(x);
     r = R_forceint(r);
